logs/x6tunnel.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/X6Tunnel-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/spiderx'...
Listing './lib/python3.5/site-packages/spiderx/core'...
Compiling './lib/python3.5/site-packages/spiderx/core/ilog.py'...
***   File "./lib/python3.5/site-packages/spiderx/core/ilog.py", line 15
    print "ilog configuration:[%s]" % (_logConfPath)
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/spiderx/httpclient'...
Compiling './lib/python3.5/site-packages/spiderx/httpclient/cookie.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (cookie.py, line 78)
Listing './lib/python3.5/site-packages/spiderx/net'...
Listing './lib/python3.5/site-packages/spiderx/xml'...
Listing './lib/python3.5/site-packages/spiderx/xml/sax'...
Listing './lib/python3.5/site-packages/x6tunnel'...
Listing './lib/python3.5/site-packages/x6tunnel/linux'...
Compiling './lib/python3.5/site-packages/x6tunnel/tunnelbroker.py'...
***   File "./lib/python3.5/site-packages/x6tunnel/tunnelbroker.py", line 282
    print m.cip4, m.cip6, m.sip4, m.sip6, m.routepre
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share'...
Listing './share/python-wheels'...
